docs/user/1.1/_sources/cli/apptainer_key_pull.rst.txt
.. _apptainer_key_pull:

apptainer key pull
------------------

Download a public key from a key server

Synopsis
~~~~~~~~



  The 'key pull' command allows you to retrieve public key material from a
  remote key server, and add it to your keyring. Note that Apptainer consults
  your keyring when running commands such as 'apptainer verify', and thus
  adding a key to your keyring implies a level of trust. Because of this, it is
  recommended that you verify the fingerprint of the key with its owner prior
  to running this command.

::

  apptainer key pull [pull options...] <fingerprint>

Examples
~~~~~~~~

::


    $ apptainer key pull 8883491F4268F173C6E5DC49EDECE4F3F38D871E

Options
~~~~~~~

::

  -g, --global           manage global public keys (import/pull/remove are restricted to root user or unprivileged installation only)
  -h, --help             help for pull
  -d, --keysdir string   set local keyring dir path, an alternative way is to set environment variable 'APPTAINER_KEYSDIR' (default "/home/runner/.apptainer/keys")
  -u, --url string       specify the key server URL

SEE ALSO
~~~~~~~~

* :ref:`apptainer key <apptainer_key>` 	 - Manage OpenPGP keys

*Auto generated by spf13/cobra on 15-Feb-2023*
